Spacing Fix 2

--- a/chest.css
+++ b/chest.css
@@ -40,6 +40,7 @@
   color: #1c1717;
   margin-left: auto;
   margin-right: auto;
+  top: 20px;
 }
 .chest__panel {
   position: absolute;
